# linux_c

./: .bashrc  .gitignore  README.md  file2
basic/: .ycm_extra_conf.py  Makefile
basic/include/: curr_time.h
basic/src/: curr_time.c
boost/demo/: test.cpp
cmake_test/: CMakeLists.txt
cmake_test/math/: CMakeLists.txt  add.c  add.h
cmake_test/src/: test.c
day10/chat/: Cli_Window  Client  Client.c
day10/chat1/: Client.c  Server  Server.c
day10/chat2/: Server  Server.c
day10/myTest/: sigaction.c  signal_catch.c
day10/myWork/: mytime  mytime.c  sig_proc  sig_proc.c  sigaction.c  sigaction_mask  sigaction_mask.c  signal
day12/mywork/: thread_cancel  thread_cancel.c  thread_safe.c
day13/mytest/: Makefile
day15/myTest/: child.c  server
day15/myWork/: child.c  main.c
day16/client_cycle/: download.c  recvCycle.c
day16/myWork/: set_block  set_block.c
day18/client_cnt/: client
day18/client_cnt2/: recvFun.c
day18/server_thread/: tags
day19/mysql/: insert.c  insert_mysql  query.c  update_mysql
day19/t_mysql/: insert.c
day20/test/: aio_read.i  (+2 more)
file/: Makefile  test
mmap_and_write/: Makefile
myMakefile/: Makefile  crtSimp.sh
myTest/: a.out  mmap_test  mmap_test.c  mmap_test_create  mmap_test_create.c  send_return  send_return.c
objdump/: Makefile  test
pattern/: .bashrc  .gitconfig  .ycm_extra_conf.py  Makefile  Makefile2  debug.sh  new  pat.c  pat.h
python/: create_av_table.py  create_av_table2.py  test.db
read/: .ycm_extra_conf.py  Makefile
test/: Makefile  test
trie/: Makefile  test
trie_for_text/: Makefile  main
(+540 files in other folders)
